# PFTN_Ionization

./: CMakeLists.txt
inc/: ddm.h  newton_iteration.h  params.h
src/: ddm.cpp  main.cpp
